初步完成计划列表和详情功能

--- a/module_demo/src/main/res/layout/item_plan.xml
+++ b/module_demo/src/main/res/layout/item_plan.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:padding="5dp"
+    android:background="@drawable/bg_radius_5"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
