--- a/module_demo/src/main/res/layout/fragment_plan_list.xml
+++ b/module_demo/src/main/res/layout/fragment_plan_list.xml
@@ -32,14 +32,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/id"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:hint="@string/plan_input_id"
-            android:autofillHints=""
-            android:inputType="number"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
