--- a/module_demo/src/main/res/layout/fragment_plan_list.xml
+++ b/module_demo/src/main/res/layout/fragment_plan_list.xml
@@ -29,7 +29,7 @@
             android:inputType="number"
             />
 
-        <com.silencefly96.module_common.view.SlideDeleteRecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
