--- a/module_demo/src/main/res/layout/item_plan.xml
+++ b/module_demo/src/main/res/layout/item_plan.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.silencefly96.module_common.view.LeftDeleteItemLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
@@ -41,4 +42,4 @@
         android:background="@color/colorAccent"
         tools:ignore="HardcodedText" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.silencefly96.module_common.view.LeftDeleteItemLayout>
