ScrollSelectView能够按思路执行，但是不顺畅

--- a/module_common/src/main/res/values/scrolll_select_view_style.xml
+++ b/module_common/src/main/res/values/scrolll_select_view_style.xml
@@ -3,5 +3,7 @@
     <declare-styleable name="ScrollSelectView">
         <attr name="mainAlpha" format="integer"/>
         <attr name="secondAlpha" format="integer"/>
+        <attr name="textScanSize" format="integer"/>
+        <attr name="changeItemYCapacity" format="dimension"/>
     </declare-styleable>
 </resources>
