--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -6,24 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.silencefly96.module_common.view.HeaderFooterView
+    <com.silencefly96.module_common.view.ScrollSelectView
         android:id="@+id/hhView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:background="@color/teal_700"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:text="@string/test_string"
-            android:focusable="true"
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             />
-
-    </com.silencefly96.module_common.view.HeaderFooterView>
+    </com.silencefly96.module_common.view.ScrollSelectView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
