--- a/module_common/src/main/res/values/scrolll_select_view_style.xml
+++ b/module_common/src/main/res/values/scrolll_select_view_style.xml
@@ -5,5 +5,6 @@
         <attr name="secondAlpha" format="integer"/>
         <attr name="textScanSize" format="integer"/>
         <attr name="changeItemYCapacity" format="dimension"/>
+        <attr name="afterUpAnimatorPeriod" format="integer"/>
     </declare-styleable>
 </resources>
