完美实现ScrollSelectView，并修复其他两个view的bug

--- a/module_common/src/main/res/values/scrolll_select_view_style.xml
+++ b/module_common/src/main/res/values/scrolll_select_view_style.xml
@@ -6,5 +6,6 @@
         <attr name="textScanSize" format="integer"/>
         <attr name="changeItemYCapacity" format="dimension"/>
         <attr name="afterUpAnimatorPeriod" format="integer"/>
+        <attr name="mainItemPercent" format="fraction"/>
     </declare-styleable>
 </resources>
