--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -6,15 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.silencefly96.module_common.view.ScrollSelectView
+    <com.silencefly96.module_common.view.TwoLayerSlideLayout
         android:id="@+id/hhView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:background="@color/teal_700"
+        app:mSidePercent="75%"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </com.silencefly96.module_common.view.ScrollSelectView>
+        <LinearLayout
+            app:slide_gravity="left"
+            android:background="@color/teal_200"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:text="@string/app_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:background="@color/purple_200"
+            android:layout_marginTop="10dp"
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:background="@color/purple_200"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="@string/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:background="@color/purple_200"
+            android:layout_marginTop="50dp"
+            android:text="@string/test_string"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.silencefly96.module_common.view.TwoLayerSlideLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
