--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/teal_700"
+        android:padding="50dp"
         app:mSidePercent="75%"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +25,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:text="@string/app_name"
+                android:text="@string/test_string"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
