完成ScrollingCollapseTopLayout全部功能

--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -6,23 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.silencefly96.module_common.view.TwoLayerSlideLayout
+    <com.silencefly96.module_common.view.ScrollingCollapseTopLayout
         android:id="@+id/hhView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/teal_700"
-        android:padding="50dp"
-        app:mSidePercent="75%"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            app:slide_gravity="left"
             android:background="@color/teal_200"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="300dp">
 
             <TextView
                 android:text="@string/test_string"
@@ -33,7 +30,7 @@
 
         <TextView
             android:background="@color/purple_200"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="100dp"
             android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -47,6 +44,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <LinearLayout
+            android:background="@color/teal_200"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+            <TextView
+                android:text="@string/test_string"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
         <TextView
             android:background="@color/purple_200"
             android:layout_marginTop="50dp"
@@ -54,6 +64,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    </com.silencefly96.module_common.view.TwoLayerSlideLayout>
+    </com.silencefly96.module_common.view.ScrollingCollapseTopLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
