--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:background="@color/teal_200"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="300dp">
 
