完成DesktopLayerLayout部分功能，逻辑不对，重新整理思路

--- a/module_common/src/main/res/values/desktop_layer_layout_style.xml
+++ b/module_common/src/main/res/values/desktop_layer_layout_style.xml
@@ -7,8 +7,10 @@
         </attr>
         <attr name="isAutoFitOrientation" format="boolean"/>
         <attr name="mPaddingValue" format="integer"/>
-        <attr name="mMainPercent" format="fraction"/>
+        <attr name="mMainPercentVertical" format="fraction"/>
+        <attr name="mMainPercentHorizontal" format="fraction"/>
+        <attr name="mOtherViewScanMinSize" format="fraction"/>
         <attr name="mDragModeUpPercent" format="fraction"/>
-        <attr name="mOffscreenPageLimit" format="integer"/>
+        <attr name="mSlideEffectPercent" format="fraction"/>
     </declare-styleable>
 </resources>
