--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -6,69 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.silencefly96.module_common.view.DesktopLayerLayout
+    <com.silencefly96.module_common.view.HexagonRankView
         android:id="@+id/hhView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/teal_700"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:background="@color/red"
-            android:layout_marginTop="50dp"
-            android:text="111"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:background="@color/yellow"
-            android:layout_marginTop="50dp"
-            android:text="222"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:background="@color/blue"
-            android:layout_marginTop="50dp"
-            android:text="333"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:background="@color/green"
-            android:layout_marginTop="50dp"
-            android:text="444"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:background="@color/cyan"
-            android:layout_marginTop="50dp"
-            android:text="555"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:background="@color/purple"
-            android:layout_marginTop="50dp"
-            android:text="666"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:ignore="HardcodedText" />
-
-    </com.silencefly96.module_common.view.DesktopLayerLayout>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
