--- a/module_demo/src/main/res/layout/activity_main.xml
+++ b/module_demo/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.silencefly96.module_common.view.PatternLockView
+    <com.silencefly96.module_common.view.ParticleLinesBgView
         android:id="@+id/hhView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
