使用navigation为所有自定义view增加演示界面

--- a/module_views/src/main/res/layout/item_left_delete.xml
+++ b/module_views/src/main/res/layout/item_left_delete.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.example.module_views.custom.LeftDeleteItemLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,9 +23,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="@id/order"
+        app:layout_constraintStart_toEndOf="@id/order"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.example.module_views.custom.LeftDeleteItemLayout>
