--- a/module_views/src/main/res/layout/activity_main.xml
+++ b/module_views/src/main/res/layout/activity_main.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:id="@+id/container"
-    android:name="com.example.module_views.MainFragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:tag="main_fragment"
-    tools:context=".MainActivity" />
+    tools:context=".MainActivity"
+
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/view_navigation"
+    />
