--- a/module_views/src/main/res/layout/fragment_airplane_game.xml
+++ b/module_views/src/main/res/layout/fragment_airplane_game.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.silencefly96.module_views.game.AirplaneFightGameView
+        android:id="@+id/gamaView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
