修复无法扫描、扫描后闪退等bug，改进页面布局

--- a/module_hardware/src/main/res/layout/fragment_bluetooth.xml
+++ b/module_hardware/src/main/res/layout/fragment_bluetooth.xml
@@ -9,22 +9,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/open_server"
-        app:layout_constraintHorizontal_bias="0.250"
-        app:layout_constraintVertical_bias="0.125"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        />
 
     <Button
         android:id="@+id/openClient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/open_client"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintVertical_bias="0.125"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/openServer"
+        android:layout_marginTop="10dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
