--- a/module_hardware/src/main/res/layout/fragment_bluetooth_server.xml
+++ b/module_hardware/src/main/res/layout/fragment_bluetooth_server.xml
@@ -68,8 +68,7 @@
                 <Button
                     android:id="@+id/all"
                     android:text="@string/all"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
 
