--- a/module_hardware/src/main/res/layout/fragment_bluetooth_client.xml
+++ b/module_hardware/src/main/res/layout/fragment_bluetooth_client.xml
@@ -40,11 +40,10 @@
                 <Button
                     android:id="@+id/set"
                     android:text="@string/set_target"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="3dp"
-                    android:layout_height="wrap_content"
                     />
 
             </LinearLayout>
@@ -68,9 +67,10 @@
                 <Button
                     android:id="@+id/send"
                     android:text="@string/send_message"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     />
 
             </LinearLayout>
@@ -110,8 +110,7 @@
                 <Button
                     android:id="@+id/scan"
                     android:text="@string/start_scan"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
 
