--- a/module_hardware/src/main/res/layout/fragment_take_photo.xml
+++ b/module_hardware/src/main/res/layout/fragment_take_photo.xml
@@ -28,14 +28,60 @@
         android:layout_marginTop="10dp"
         />
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/cropSwitch"
-        android:checked="true"
+    <Button
+        android:id="@+id/insertPictures"
+        android:text="@string/insert_photo_to_pictures"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/pickPhoto"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/clearCache"
+        android:text="@string/clear_Cache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/insertPictures"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/clearPictures"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/clearPictures"
+        android:text="@string/clear_this_pictures"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/insertPictures"
+        app:layout_constraintLeft_toRightOf="@+id/clearCache"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:id="@+id/enable_crop_text"
+        android:textSize="18sp"
+        android:text="@string/enable_crop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/cropSwitch"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/cropSwitch"
+        app:layout_constraintBottom_toBottomOf="@id/cropSwitch"
+        />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/cropSwitch"
+        android:checked="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        app:layout_constraintLeft_toRightOf="@id/enable_crop_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/clearPictures"
         />
 
     <ImageView
