--- a/module_views/src/main/res/layout/item_slide_delete.xml
+++ b/module_views/src/main/res/layout/item_slide_delete.xml
@@ -12,6 +12,7 @@
         android:id="@+id/order"
         android:layout_width="100dp"
         android:layout_height="0dp"
+        android:background="@color/teal_200"
         android:gravity="start|center_vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,6 +23,7 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/purple_500"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/order"
         app:layout_constraintEnd_toEndOf="parent"
